--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "rushikesh",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^20.10.8",
+    "@types/ws": "^8.5.10",
+    "express": "^4.18.2",
+    "typescript": "^5.3.3",
+    "ws": "^8.16.0"
+  }
 }
