--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/server.js"
   },
   "author": "rushikesh",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "express": "^4.18.2",
     "typescript": "^5.3.3",
     "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
