--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
       "module": "commonjs",
       "outDir": "./dist",
       "rootDir": "./src",
-      "strict": true
+      "strict": true,
+      "esModuleInterop": false
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
